# Automatics_Odoo_Backups

./: README.md  pyproject.toml
automatic_backups/: SmbConnection.py  __init__.py  config.py  test.py
