[tool.poetry] 
name = "automatic-backups"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "automatic_backups"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
httpx = "^0.23.3"
schedule = "^1.1.0"
smbprotocol = "^1.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
black = "^23.3.0"
isort = "^5.12.0"
taskipy = "^1.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
